--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/MCStatusBot/parserIP#readme",
   "dependencies": {
-    "axios": "^1.7.4"
+    "axios": "^1.7.4",
+    "parserip": "github:MCStatusBot/parserIP"
   }
 }
